src/objects/Zephr_Account_Grant__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Zephr Account Grants</relationshipLabel>
        <relationshipName>Zephr_Account_Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Zephr Account Grants</relationshipLabel>
        <relationshipName>Zephr_Account_Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Product</label>
        <referenceTo>Subscription_Product__c</referenceTo>
        <relationshipLabel>Zephr Account Grants</relationshipLabel>
        <relationshipName>Zephr_Account_Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zephr_API_URL__c</fullName>
        <formula>HYPERLINK(&apos;https://console.zephr.com/v3/accounts/&apos;+Zephr_Account__r.Zephr_Id__c +&apos;/grants/&apos;+ Zephr_Id__c, &apos;Open in Zephr&apos; , &apos;_blank&apos;)</formula>
        <label>Zephr API URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account for the grant</description>
        <label>Zephr Account</label>
        <referenceTo>Zephr_Account__c</referenceTo>
        <relationshipLabel>Zephr Account Grants</relationshipLabel>
        <relationshipName>Zephr_Account_Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zephr_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Zephr Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zephr_Integration_Message__c</fullName>
        <label>Zephr Integration Message</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zephr_Integration_Status__c</fullName>
        <label>Zephr Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zephr_Integration_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zephr_Tenant__c</fullName>
        <label>Zephr Tenant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zephr_Tenant</valueSetName>
        </valueSet>
    </fields>
    <label>Zephr Account Grant</label>
    <nameField>
        <displayFormat>ZAG-{000000000}</displayFormat>
        <label>CODE</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zephr Account Grants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>